<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.cleansoft.duvoice.ui.home.HomeFragment"
        android:label="@string/home_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_home_to_player"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/recordFragment"
        android:name="com.cleansoft.duvoice.ui.record.RecordFragment"
        android:label="@string/record_label"
        tools:layout="@layout/fragment_record">

        <action
            android:id="@+id/action_record_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.cleansoft.duvoice.ui.player.PlayerFragment"
        android:label="@string/player_label"
        tools:layout="@layout/fragment_player">

        <argument
            android:name="recordingId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.cleansoft.duvoice.ui.settings.SettingsFragment"
        android:label="@string/settings_label"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/statsFragment"
        android:name="com.cleansoft.duvoice.ui.stats.StatsFragment"
        android:label="@string/stats_label"
        tools:layout="@layout/fragment_stats" />

</navigation>